--- a/app/listviews.html
+++ b/app/listviews.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div data-role="page" data-theme="a">
-			<div data-role="header" data-position="inline">
+			<div data-role="header" data-position="inline" class="ui-bar ui-bar-b">
 				<h1>jQuery Mobile Bootstrap Theme</h1>
 				<div data-role="navbar">
 					<ul>
