--- a/app/buttons.html
+++ b/app/buttons.html
@@ -8,8 +8,8 @@
   		<script data-main="scripts/main" src="scripts/libs/require.js"></script>
 	</head>
 	<body>
-		<div data-role="page" data-theme="a">
-			<div data-role="header" data-position="inline">
+		<div data-role="page" data-theme="b">
+			<div data-role="header" data-position="inline" class="ui-bar ui-bar-b">
 				<h1>jQuery Mobile Bootstrap Theme</h1>
 				<div data-role="navbar">
 					<ul>
