--- a/app/forms.html
+++ b/app/forms.html
@@ -8,7 +8,7 @@
 		<script data-main="scripts/main" src="scripts/libs/require.js"></script>
 	</head>
 	<body>
-		<div data-role="page" data-theme="a">
+		<div data-role="page" data-theme="b">
 			<div data-role="header" data-position="inline">
 				<h1>jQuery Mobile Bootstrap Theme</h1>
 				<div data-role="navbar">
