--- a/app/works.html
+++ b/app/works.html
@@ -6,6 +6,7 @@
 	<title>Jquery Mobile - Works</title>
 	<link rel="stylesheet" href="styles/jquery-mobile.css">
 	<link rel="stylesheet" href="styles/Bootstrap.css">
+	<link rel="stylesheet" href="styles/theme-override.css">
 	<script data-main="scripts/main" src="scripts/libs/require.js"></script>
 </head>
 <body>
@@ -13,12 +14,12 @@
 	<div data-role="panel" id="mypanel" data-position="right" data-display="push">
 	<a href="#mypanel" data-rel="close">Close panel</a>
 	</div>
-		<div data-role="header" data-position="inline" data-theme="c">
+		<div data-role="header" data-position="inline">
 		<h1 class="cus-title-pd">jQuery Mobile App - Works</h1>
 			<div data-role="navbar">
 				<ul>
-					<li><a href="index.html" data-icon="home">Home</a></li>
-					<li><a href="profile.html" data-icon="star">Profile</a></li>
+					<li><a href="index.html" data-icon="home" data-transition="slide" data-direction="reverse">Home</a></li>
+					<li><a href="profile.html" data-icon="star" data-transition="slide" data-direction="reverse">Profile</a></li>
 					<li><a href="works.html" data-icon="grid" class="ui-btn-active">Works</a></li>
 				</ul>
 			</div>
@@ -28,7 +29,7 @@
 			
 		</div>
 		
-		<div data-role="footer" data-position="fixed" data-theme="c">
+		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="">Connect Me</a></li>
